# sysinstall

./: .gitignore  README.md  pyproject.toml  sysinstall.spec
.claude/: .ck.json  .ckignore  .gitignore  metadata.json  settings.json
.github/scripts/: sign-and-notarize-macos.sh  sign-windows.ps1
.github/workflows/: ci.yml  release.yml
docs/: code-standards.md  codebase-summary.md  deployment-guide.md  design-guidelines.md  development-roadmap.md  project-changelog.md  project-overview-pdr.md  safety.md  system-architecture.md  troubleshooting.md
docs/install/: linux.md  macos.md  windows.md
docs/tutorials/: dual-boot-windows-ubuntu.md  multiboot-usb.md
plans/260428-1109-sysinstall-mvp/: phase-01-project-scaffolding.md  phase-02-disk-enumeration.md  phase-03-usb-ventoy-install.md  phase-04-iso-management.md  phase-05-hdd-dual-boot-partition.md  phase-06-bootloader-finalization.md  phase-07-safety-layer.md  phase-08-tests.md  phase-09-docs-packaging.md  plan.md
plans/260428-1109-sysinstall-mvp/reports/: docs-manager-260428-1534-phase-09-final.md  fullstack-260428-1138-phase-01-scaffolding.md  fullstack-260428-1307-phase-02-disk-enumeration.md  fullstack-260428-1338-phase-03-usb-ventoy.md  fullstack-260428-1352-phase-04-iso-management.md  fullstack-260428-1408-phase-05-partition.md  fullstack-260428-1424-phase-06-bootloader.md  fullstack-260428-1443-phase-07-safety.md  tester-260428-1500-phase-08-tests.md
plans/260428-1109-sysinstall-mvp/research/: researcher-01-ventoy-cli.md  researcher-02-disk-enumeration.md  researcher-03-windows-disk-ops.md  researcher-04-macos-disk-ops.md  researcher-05-linux-disk-ops.md  researcher-06-grub-repair.md  researcher-07-pyinstaller-packaging.md
src/sysinstall/: __init__.py  __main__.py
src/sysinstall/boot/: __init__.py  backup.py  chroot.py  detector.py  efi.py  grub.py  orchestrator.py  types.py
src/sysinstall/cli/: __init__.py  boot.py  disk.py  iso.py  usb.py
tests/: _sanitiser.py  conftest.py  test_smoke.py
tests/boot/: test_chroot_seq.py  test_detector.py  test_efi_parser.py  test_grub_cmds.py  test_host_gate.py  test_os_prober_toggle.py
tests/cli/: test_smoke.py
tests/disks/: test_identifiers.py  test_linux_parser.py  test_macos_parser.py  test_windows_parser.py
tests/iso/: test_catalog.py  test_checksum.py  test_copy_stream.py  test_filename_validator.py  test_freespace.py
tests/partition/: test_layout.py  test_planner.py  test_preflight.py  test_runner_linux_cmd_gen.py  test_runner_macos_cmd_gen.py  test_runner_windows_cmd_gen.py
tests/safety/: test_audit.py  test_audit_perms.py  test_gates.py  test_global_flags.py  test_guards.py  test_prompts.py
tests/smoke/: README.md  boot_repair_dualboot.sh  disk_partition_dualboot.sh  linux_usb_create.sh  windows_usb_create.ps1
tests/ventoy/: test_config.py  test_config_extend.py  test_downloader.py  test_macos_unsupported.py  test_runner_linux_parsing.py  test_runner_windows_parsing.py
(+46 files in other folders)
